--- a/ARZombie/Base.lproj/Main.storyboard
+++ b/ARZombie/Base.lproj/Main.storyboard
@@ -84,6 +84,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1I-dy-tk0">
+                                <rect key="frame" x="185.5" y="803" width="43" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="67t-Dh-LlB"/>
+                                    <constraint firstAttribute="height" constant="36" id="rSt-Jz-nGB"/>
+                                </constraints>
+                                <state key="normal" image="pause"/>
+                                <connections>
+                                    <action selector="pausePressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="2NW-aG-nC3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -95,6 +106,8 @@
                             <constraint firstItem="EqT-hX-vTc" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="ScB-PF-SJL"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="O1I-dy-tk0" secondAttribute="bottom" constant="23" id="fe7-p8-O34"/>
+                            <constraint firstItem="O1I-dy-tk0" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="iGK-tL-KY2"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                             <constraint firstItem="KXU-ER-3c1" firstAttribute="centerY" secondItem="U0K-SW-4ec" secondAttribute="centerY" id="wpw-nx-A75"/>
                         </constraints>
@@ -105,6 +118,7 @@
                         <outlet property="activityIndicator" destination="KXU-ER-3c1" id="5ze-n6-bAB"/>
                         <outlet property="label1" destination="EqT-hX-vTc" id="CPH-Es-70Z"/>
                         <outlet property="label2" destination="I2a-6e-vDq" id="u97-NT-8ed"/>
+                        <outlet property="pauseBtn" destination="O1I-dy-tk0" id="RpE-uy-d26"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                         <segue destination="WGy-R7-Nv6" kind="unwind" identifier="GameToMenu" unwindAction="unwindGameWithSegue:" id="xAi-K0-NLv"/>
                     </connections>
@@ -115,4 +129,7 @@
             <point key="canvasLocation" x="131.8840579710145" y="76.339285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pause" width="256" height="256"/>
+    </resources>
 </document>
