--- a/ARZombie/Base.lproj/LaunchScreen.storyboard
+++ b/ARZombie/Base.lproj/LaunchScreen.storyboard
@@ -16,16 +16,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ARZombies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TE3-Fm-DJE">
-                                <rect key="frame" x="115.5" y="427.5" width="183.5" height="41"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <rect key="frame" x="132.5" y="533.5" width="149.5" height="39"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zombie-head" translatesAutoresizingMaskIntoConstraints="NO" id="qQa-oM-3px">
+                                <rect key="frame" x="129.5" y="370.5" width="155" height="155"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="155" id="1dJ-Cr-91Q"/>
+                                    <constraint firstAttribute="width" constant="155" id="5ac-NQ-ntM"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="TE3-Fm-DJE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lcH-DF-gLU"/>
-                            <constraint firstItem="TE3-Fm-DJE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="r5v-3Y-3vt"/>
+                            <constraint firstItem="qQa-oM-3px" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5zC-On-z7M"/>
+                            <constraint firstItem="TE3-Fm-DJE" firstAttribute="top" secondItem="qQa-oM-3px" secondAttribute="bottom" constant="8" id="6W7-zG-8bp"/>
+                            <constraint firstItem="qQa-oM-3px" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="rIN-uk-QPY"/>
+                            <constraint firstItem="TE3-Fm-DJE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xNR-NK-cUe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -35,4 +44,7 @@
             <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="zombie-head" width="1327" height="1325"/>
+    </resources>
 </document>
